--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 * {
     margin: 0;
     padding: 0;
+    background-color: rgb(229, 221, 208);
 }
 
 body {
@@ -31,6 +32,7 @@ a,
 nav, 
 .nav-links {
     display: flex;
+    align-items: center;
 }
 
 nav {
@@ -46,20 +48,28 @@ nav {
 }
 
 a {
-    color: black;
+    color: rgb(59, 49, 22);
     text-decoration: none;
     text-decoration-color: white;
 }
+ 
+#rsvp {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border: 2px solid rgb(59, 49, 22);
+}
 
 a:hover {
-    color: grey;
-    text-decoration: underline;
+    color: rgb(150, 165, 102);
     text-underline-offset: 1rem;
-    text-decoration-color: rgb(181, 181, 181);
+    text-decoration-color: rgb(138, 131, 63);
 }
 
 .logo {
-    font-size: 2rem;
+    font-size: 2.5rem;
+    color: rgb(59, 49, 22);
 }
 
 .logo:hover {
@@ -89,7 +99,7 @@ a:hover {
 .hamburger-icon span {
     width: 100%;
     height: 2px;
-    background-color: black;
+    background-color: rgb(59, 49, 22);
     transition: all 0.3 ease-in-out;
 }
 
@@ -109,7 +119,7 @@ a:hover {
     padding: 10px;
     text-align: center;
     font-size: 1.5rem;
-    color: black;
+    color: rgb(59, 49, 22);
     text-decoration: none;
     transition: all 0.3 ease-in-out;
 }
@@ -156,21 +166,20 @@ section {
     min-height: fit-content;
 }
 
-.section-container {
+/* .section-container {
     display: flex;
-}
+} */
 
-/* Profile Section */
+/* Cover Section */
 
-#profile {
-    /* display: flex; */
-    justify-content: center;
-    gap: 5rem;
+#cover {
+    justify-content: stretch;
     height: 80vh;
 }
 
 .section__pic-container {
     display: flex;
+    justify-content: center;
     height: inherit;
     width: inherit;
     margin: auto 0;
@@ -178,8 +187,10 @@ section {
 
 .section__text {
     display: flex;
+    justify-content: center;
+    padding: 10px;
 }
 
 .section__text__p1 {
-    color: black;
+    color: rgb(59, 49, 22);
 }
