--- a/style.css
+++ b/style.css
@@ -307,10 +307,16 @@ section {
     color: rgb(59, 49, 22);
 }
 
-.cocktail-party-text {
+.garden-party-text {
     font-size: 1.5rem;
     font-weight: 100;
     color: rgb(59, 49, 22);
+}
+
+.garden-party-idea-text {
+    font-size: 1rem;
+    color: rgb(59, 49, 22);
+    font-weight: 100;
 }
 
 .color-scheme {
@@ -329,3 +335,59 @@ section {
     font-weight: 100;
     color: rgb(59, 49, 22);
 }
+
+.color-circle-section {
+    display: flex;
+    gap: .5rem;
+    padding-top: 15px;
+}
+
+.circle-1 {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: rgb(190, 125, 119);
+}
+
+.circle-2 {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: rgb(208, 169, 110);
+}
+
+.circle-3 {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: rgb(118, 117, 86);
+}
+
+.circle-4 {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: rgb(181, 158, 124);
+}
+
+.circle-5 {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: rgb(201, 187, 208, 1);
+}
+
+.circle-6 {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: rgb(136, 112, 84);
+}
+
+.circle-7 {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: rgb(182, 132, 69);
+}
+
