--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,8 +1,6 @@
 @media screen and (max-width: 1400px) {
     #cover {
         height: 83vh;
-        margin-bottom: 6rem;
-
     }
 }
 
@@ -20,6 +18,13 @@
         padding-right: 1rem;
         padding-left: 1rem;
     }
+    .menu-links.open{
+        z-index: 1;
+        margin-top: 2.37rem;
+        width: 44vh;
+        opacity: 95%;
+        background-color: mistyrose;
+    }
     .logo {
         font-size: 1.6rem;
     }
@@ -27,8 +32,8 @@
     /* Cover */
     #cover {
         display: block;
-        margin-bottom: .3rem;
-        height: 60vh;
+        margin-bottom: 0rem;
+        height: 18.75rem;
     }
     section {
         height: fit-content;
@@ -51,6 +56,9 @@
         padding: .5rem 1rem .5rem 1rem;
         font-size: 1.4rem;
         font-weight: 300;
+    }
+    .invite-text{
+        padding-top: 2rem;
     }
 
     /* Our Story */
