--- a/style.css
+++ b/style.css
@@ -184,12 +184,16 @@ a:hover {
 }
 
 .cover-text-2 {
-    padding: 95px;
+    padding: 5rem 10rem 0rem 10rem;
     justify-content: center;
     color: rgb(59, 49, 22);
     font-size: 2rem;
     font-weight: 200;
     text-align: center;
+}
+
+.invite-text{
+    height: 16rem;
 }
 
 /* Sections */
@@ -201,7 +205,7 @@ section {
 /* Our Story Section */
 
 #our-story-section {
-    padding: 150px;
+    padding: 0rem 11rem 11rem 11rem;
 }
 
 .our-story-pic-container {
@@ -286,6 +290,9 @@ section {
     font-weight: 100;
     color: rgb(59, 49, 22);
     padding-bottom: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .rhubarb-address-text {
@@ -312,7 +319,14 @@ section {
     color: rgb(59, 49, 22);
 }
 
-.garden-party-idea-text {
+.link-text {
+    padding-right: .3rem;
+}
+
+.idea-board-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 1rem;
     color: rgb(59, 49, 22);
     font-weight: 100;
@@ -390,3 +404,10 @@ section {
     background-color: rgb(182, 132, 69);
 }
 
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 200,
+  'GRAD' 0,
+  'opsz' 24
+}
