--- a/style.css
+++ b/style.css
@@ -181,6 +181,15 @@ a:hover {
     color: white;
     font-size: 2rem;
     font-weight: 200;
+    visibility: visible;
+}
+
+.cover-text-p2 {
+    color: white;
+    font-size: 1.8rem;
+    font-weight: 200;
+    visibility: hidden;
+    height: 0px;
 }
 
 .cover-text-2 {
@@ -274,13 +283,13 @@ section {
     width: inherit;
 }
 
-.reception {
+.wedding-info-title-text {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.reception-text {
+.wedding-info-sub-title-text {
     font-size: 2rem;
     color: rgb(59, 49, 22);
 }
@@ -301,18 +310,6 @@ section {
     font-weight: 100;
 }
 
-.dress-code {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
-}
-
-.dress-code-text {
-    font-size: 2rem;
-    color: rgb(59, 49, 22);
-}
-
 .garden-party-text {
     font-size: 1.5rem;
     font-weight: 100;
@@ -330,17 +327,6 @@ section {
     font-size: 1rem;
     color: rgb(59, 49, 22);
     font-weight: 100;
-}
-
-.color-scheme {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.color-scheme-text {
-    font-size: 2rem;
-    color: rgb(59, 49, 22);
 }
 
 .color-scheme-spring-neutral-text {
