--- a/css/travel.css
+++ b/css/travel.css
@@ -36,6 +36,7 @@
 .travel-info {
     gap: 5rem;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     height: inherit;
     width: inherit;
