--- a/css/gift.css
+++ b/css/gift.css
@@ -37,9 +37,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 100;
     color: rgb(59, 49, 22);
+
+    .link-text {
+        font-size: 1.5rem;
+        font-weight: 400;
+    }
+
+    .material-symbols-outlined {
+        font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 24;
+    }
 }
 
 .gift-link-container {
@@ -53,14 +62,13 @@
 
 @media screen and (max-width: 1200px) {
     #gift-section {
-        margin: 0px;
-        padding-left: 0px;
-        padding-right: 0px;
+        margin: 0 0 0 0;
+        padding: 0rem 0rem 5rem 0rem; 
     }
 
     .gift-pic-container  {
         height: 300px;
-        padding-bottom: 0px;
+        padding-bottom: 5rem;
         overflow-x: hidden;
     }
 
