--- a/css/general.css
+++ b/css/general.css
@@ -1,6 +1,7 @@
 /* General */
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap');
 
 * {
     margin: 0;
@@ -68,7 +69,9 @@ a:hover {
 }
 
 .logo {
-    font-size: 2.5rem;
+    font-size: 3rem;
+    font-weight: 600;
+    font-family: 'Playfair Display', serif;
     color: rgb(59, 49, 22);
 }
 
@@ -191,7 +194,7 @@ section {
         border-radius: 1rem;
     }
     .logo {
-        font-size: 1.6rem;
+        font-size: 2rem;
     }
     section {
         height: fit-content;
