--- a/css/cover.css
+++ b/css/cover.css
@@ -50,12 +50,13 @@
     #cover {
         display: block;
         margin-bottom: 0rem;
-        height: 18.75rem;
+        height: inherit;
     }
     .cover-pic-container
     {
         height: 300px;
-        margin: 0 auto 1rem;
+        margin: 0;
+        padding-bottom: 2.5rem;
         overflow-x: hidden;
     }
     .cover-text{
@@ -77,7 +78,6 @@
         font-weight: 300;
     }
     .invite-text{
-        padding-top: 2rem;
         height: 7rem;
     }
 }
