--- a/css/travel.css
+++ b/css/travel.css
@@ -84,7 +84,7 @@
 
 @media screen and (max-width: 1200px) {
     #travel-section {
-        padding: 0rem 0rem 10rem 0rem;
+        padding: 0rem 0rem 4rem 0rem;
         margin: 0 0 0 0;
     }
 
@@ -95,7 +95,7 @@
 
     .travel-pic-container {
         height: 300px;
-        padding-bottom: 5rem;
+        padding-bottom: 2.5rem;
         overflow-x: hidden;
     }
 
@@ -107,5 +107,8 @@
     .hotel-images {
         overflow-x: hidden;
         height: 200px;
+    }
+    .places-to-stay-title {
+        padding-bottom: 2.5rem;
     }
 }
