--- a/css/gift.css
+++ b/css/gift.css
@@ -1,7 +1,7 @@
 #gift-section {
     justify-content: stretch;
     height: inherit;
-    padding-top: 375px;
+    padding-bottom: 50px
 }
 
 .gift-pic-container {
