--- a/css/wedding.css
+++ b/css/wedding.css
@@ -2,6 +2,7 @@
     justify-content: stretch;
     height: inherit;
     padding-top: 375px;
+    padding-bottom: 50px;
 }
 
 .wedding-pic-container {
