--- a/css/wedding.css
+++ b/css/wedding.css
@@ -1,23 +1,22 @@
 #wedding-section {
-    justify-content: stretch;
     height: inherit;
-    padding-top: 375px;
-    padding-bottom: 50px;
+    justify-content: stretch;
+    padding-bottom: 4rem;
 }
 
 .wedding-pic-container {
     display: flex;
-    justify-content: center;
     height: 80vh;
     width: inherit;
     position: relative;
-    padding-bottom: 80px;
+    justify-content: center;
+    padding-bottom: 4rem;
 }
 
 .wedding-text {
-    justify-content: center;
-    position: absolute;
     top: 16rem;
+    position: absolute;
+    justify-content: center;
 }
 
 .wedding-text-p1 {
@@ -27,11 +26,11 @@
 }
 
 .wedding-info {
-    gap: 10rem;
     display: flex;
-    justify-content: center;
     height: inherit;
     width: inherit;
+    gap: 10rem;
+    justify-content: center;
 }
 
 .wedding-info-title-text {
@@ -41,30 +40,30 @@
 }
 
 .wedding-info-sub-title-text {
-    font-size: 2rem;
     color: rgb(59, 49, 22);
+    font-size: 2rem;
 }
 
 .reception-rhubarb-text {
+    display: flex;
+    color: rgb(59, 49, 22);
     font-size: 1.5rem;
     font-weight: 100;
-    color: rgb(59, 49, 22);
-    padding-bottom: 5px;
-    display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    padding-bottom: .3rem;
 }
 
 .rhubarb-address-text {
-    font-size: 1rem;
     color: rgb(59, 49, 22);
+    font-size: 1rem;
     font-weight: 100;
 }
 
 .garden-party-text {
+    color: rgb(59, 49, 22);
     font-size: 1.5rem;
     font-weight: 100;
-    color: rgb(59, 49, 22);
 }
 
 .link-text {
@@ -73,82 +72,82 @@
 
 .idea-board-container{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1rem;
     color: rgb(59, 49, 22);
+    font-size: 1rem;
     font-weight: 100;
+    align-items: center;
+    justify-content: center;
 }
 
 .color-scheme-spring-neutral-text {
+    color: rgb(59, 49, 22);
     font-size: 1.5rem;
     font-weight: 100;
-    color: rgb(59, 49, 22);
+    padding-bottom: .9rem;
 }
 
 .color-circle-section {
     display: flex;
     gap: .5rem;
-    padding-top: 15px;
 }
 
 .circle-1 {
-    width: 20px;
-    height: 20px;
+    width: 1.25rem;
+    height: 1.25rem;
     border-radius: 50%;
     background-color: rgb(190, 125, 119);
 }
 
 .circle-2 {
-    width: 20px;
-    height: 20px;
+    width: 1.25rem;
+    height: 1.25rem;
     border-radius: 50%;
     background-color: rgb(208, 169, 110);
 }
 
 .circle-3 {
-    width: 20px;
-    height: 20px;
+    width: 1.25rem;
+    height: 1.25rem;
     border-radius: 50%;
     background-color: rgb(118, 117, 86);
 }
 
 .circle-4 {
-    width: 20px;
-    height: 20px;
+    width: 1.25rem;
+    height: 1.25rem;
     border-radius: 50%;
     background-color: rgb(181, 158, 124);
 }
 
 .circle-5 {
-    width: 20px;
-    height: 20px;
+    width: 1.25rem;
+    height: 1.25rem;
     border-radius: 50%;
     background-color: rgb(201, 187, 208, 1);
 }
 
 .circle-6 {
-    width: 20px;
-    height: 20px;
+    width: 1.25rem;
+    height: 1.25rem;
     border-radius: 50%;
     background-color: rgb(136, 112, 84);
 }
 
 .circle-7 {
-    width: 20px;
-    height: 20px;
+    width: 1.25rem;
+    height: 1.25rem;
     border-radius: 50%;
     background-color: rgb(182, 132, 69);
 }
 
 @media screen and (max-width: 1200px) {
     #wedding-section {
-        padding: 0rem 0rem 4rem 0rem;
-        margin: 0 0 0 0;
+        padding-bottom: 4rem;
+        margin: 0rem;
     }
     .wedding-pic-container
     {
-        height: 300px;
+        height: 19rem;
         overflow-x: hidden;
         padding-bottom: 2.5rem;
     }
@@ -157,7 +156,7 @@
         width: max-content;
     }
     .wedding-info{
-        gap: 4rem;
+        gap: 2.5rem;
         flex-direction: column;
     }
 }
