--- a/css/general.css
+++ b/css/general.css
@@ -11,6 +11,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     background-color: rgb(229, 221, 208);
+    padding-bottom: 10rem;
 }
 
 html {
