--- a/css/general.css
+++ b/css/general.css
@@ -1,6 +1,6 @@
 /* General */
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap');
 
 * {
@@ -9,7 +9,7 @@
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Cormorant Infant', serif;
     background-color: rgb(229, 221, 208);
     padding-bottom: 10rem;
 }
@@ -46,7 +46,7 @@ nav {
 .nav-links {
     gap: 2rem;
     list-style: none;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
 }
 
 a {
@@ -162,6 +162,7 @@ a:hover {
 
 .link-text {
     padding-right: 0.3rem;
+    font-size: 3rem;
 }
 
 .material-symbols-outlined {
@@ -176,9 +177,11 @@ section {
     body{
         overflow-x: hidden;
     }
+    
     #desktop-nav {
         display: none;
     }
+    
     #hamburger-nav {
         display: flex;
         height: 5rem;    
@@ -186,17 +189,18 @@ section {
         padding-right: 1rem;
         padding-left: 1rem;
     }
+    
     .menu-links.open{
         z-index: 1;
         margin-top: 2.37rem;
         width: 44vh;
-        opacity: 95%;
-        background-color: rgb(172 186 99);
-        border-radius: 1rem;
+        background-color: rgb(229, 221, 208);
     }
+    
     .logo {
         font-size: 2rem;
     }
+    
     section {
         height: fit-content;
         margin: 0 5%;
