--- a/css/gift.css
+++ b/css/gift.css
@@ -21,7 +21,7 @@
 
 .gift-text-p1 {
     color: white;
-    font-size: 2rem;
+    font-size: 5rem;
     font-weight: 200;
 }
 
@@ -50,7 +50,7 @@
     flex-direction: column;
 
     .link-text {
-        font-size: 1.5rem;
+        font-size: 3rem;
         font-weight: 400;
     }
 
@@ -87,5 +87,15 @@
     .collective-gift-info{
         gap: 2.5rem;
         flex-direction: column;
+    }
+    
+    .gift-text-p1 {
+        font-size: 2.5rem;
+    }
+
+    .gift-title-text{
+        .link-text{
+            font-size: 2rem;
+        }
     }
 }
