--- a/css/rsvp.css
+++ b/css/rsvp.css
@@ -21,7 +21,7 @@
 
 .rsvp-text-p1 {
     color: white;
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: 200;
 }
 
@@ -36,7 +36,7 @@
 .rsvp-title-text {
     display: flex;
     color: rgb(59, 49, 22);
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: 100;
     align-items: center;
     text-align: center;
@@ -44,7 +44,7 @@
     padding-bottom: 2.5rem;
 
     .link-text {
-        font-size: 1.5rem;
+        font-size: 2rem;
         font-weight: 400;
     }
 
@@ -56,7 +56,7 @@
 .rsvp-link-container {
     display: flex;
     color: rgb(59, 49, 22);
-    font-size: 1rem;
+    font-size: 2rem;
     font-weight: 100;
     align-items: center;
     justify-content: center;
@@ -71,12 +71,11 @@
     align-content: center;
     flex-wrap: wrap;
     flex-direction: column;
-    /* font-family: 'Poppins', sans-serif; */
 }
 
 input.rsvp-form-field-1, .rsvp-form-field-1:focus, .rsvp-form-field-1:valid{
     color: rgb(59, 49, 22);
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Cormorant Infant', serif;
     width: 25rem;
     height: 2rem;
     border-top: none;
