--- a/css/wedding.css
+++ b/css/wedding.css
@@ -27,21 +27,81 @@
 
 .wedding-info {
     display: flex;
+    flex-direction: column;
     height: inherit;
     width: inherit;
-    gap: 10rem;
+    gap: 4rem;
     justify-content: center;
+}
+
+.wedding-info-div{
+    width: 40rem;
 }
 
 .wedding-info-title-text {
     display: flex;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.wedding-info-sub-section{
+    display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
+    .reception-section{
+        display: flex;
+        gap: 4rem;
+        align-items: center;
+    }
+}
+
+.image-stack{
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+    padding-left: 8rem;
+    .top-image{
+        height: 27rem;
+    }
+    .bottom-image{
+        height: 27rem;
+    }
 }
 
 .wedding-info-sub-title-text {
     color: rgb(59, 49, 22);
     font-size: 2.5rem;
+    font-weight: 500;
+}
+
+.wedding-info-sub-title-text-p2 {
+    color: rgb(59, 49, 22);
+    font-size: 2rem;
+    padding-top: 1rem;
+    width: 40rem;
+}
+
+.wedding-info-sub-title-text-p3 {
+    color: rgb(59, 49, 22);
+    font-size: 1.5rem;
+    padding-top: 1rem;
+    width: 40rem;
+}
+
+.wedding-images {
+    height: 22.5rem;
+    width: 31.25rem;
+    background-size: cover;
+}
+
+.attire-images {
+    width: 17.5rem;
+    height: 26.25rem;
+    background-size: cover;
+}
+
+.rhubarb-address{
+    display: flex;
 }
 
 .reception-rhubarb-text {
@@ -62,7 +122,7 @@
 
 .garden-party-text {
     color: rgb(59, 49, 22);
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 100;
 }
 
@@ -76,12 +136,11 @@
     font-size: 1rem;
     font-weight: 100;
     align-items: center;
-    justify-content: center;
 }
 
 .color-scheme-spring-neutral-text {
     color: rgb(59, 49, 22);
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 100;
     padding-bottom: .9rem;
 }
@@ -162,6 +221,14 @@
         gap: 2.5rem;
         flex-direction: column;
     }
+
+    .wedding-images{
+        flex-direction: column;
+        height: 12.5rem;
+        width: 18.75rem;
+        background-size: cover;
+        overflow-x: hidden;
+    }
     
     .wedding-text-p1 {
         font-size: 2.5rem;
@@ -174,5 +241,68 @@
     .rhubarb-address-text{
         font-size: 1.5rem;
         font-weight: 100;
+    }
+
+    .wedding-info-title-text{
+        flex-direction: column-reverse;
+        align-items: center;
+        .wedding-info-sub-section{
+            display: flex;
+            flex-direction: column;
+            width: 23rem;
+            align-items: center;
+            .recetpion-section{
+                flex-direction: column;
+            }
+        }
+    }
+
+    .wedding-info-sub-title-text-p2 {
+        width: 20rem;
+        font-size: 1.2rem;
+        line-height: 1.8rem;
+    }
+    
+    .wedding-info-sub-title-text-p3 {
+        width: 20rem;
+        font-size: 1.2rem;
+        line-height: 1.8rem;
+    }
+
+    .rhubarb-address{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .garden-party-text {
+        font-size: 1.5rem;
+    }
+
+    .color-scheme-spring-neutral-text{
+        font-size: 1.5rem;
+    }
+
+    .image-stack{
+        padding-left: 0;
+        gap: 1rem;
+        .top-image {
+            height: 18rem;
+        }
+    
+        .bottom-image {
+            height: 18rem;
+        }
+    }
+
+    .wedding-info-sub-section{
+        .reception-section{
+            flex-direction: column;
+            gap: 2rem;
+            .reception-sub-section{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+        }
     }
 }
