--- a/css/rsvp.css
+++ b/css/rsvp.css
@@ -42,6 +42,7 @@
     text-align: center;
     flex-direction: column;
     padding-bottom: 2.5rem;
+    width: 40rem;
 
     .link-text {
         font-size: 2rem;
@@ -109,5 +110,6 @@ input.rsvp-form-field-1, .rsvp-form-field-1:focus, .rsvp-form-field-1:valid{
 
     .rsvp-title-text {
         font-size: 1.5rem;
+        width: 14rem;
     }
 }
