--- a/css/wedding.css
+++ b/css/wedding.css
@@ -199,6 +199,13 @@
     background-color: rgb(182, 132, 69);
 }
 
+.circle-7 {
+    width: 1.25rem;
+    height: 1.25rem;
+    border-radius: 50%;
+    background-color: rgb(99,122,164);
+}
+
 @media screen and (max-width: 1200px) {
     #wedding-section {
         padding-bottom: 4rem;
