--- a/css/gift.css
+++ b/css/gift.css
@@ -25,6 +25,22 @@
     font-weight: 200;
 }
 
+.gift-text-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.gift-subheading {
+    color: rgb(59, 49, 22);
+    width: 80rem;
+    position: relative;
+    font-size: 2.5rem;
+    font-weight: 100;
+    text-align: center;
+    padding-bottom: 2.5rem;
+}
+
 .collective-gift-info {
     display: flex;
     height: inherit;
@@ -97,5 +113,10 @@
         .link-text{
             font-size: 2rem;
         }
+    }
+
+    .gift-subheading {
+        font-size: 1.5rem;
+        width: 24rem;
     }
 }
